# rust-grrs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
test_data/: test.txt
tests/: cli.rs
