[package]
name = "grrs"
version = "0.1.0"
authors = ["sparrow0hawk <alexjcoleman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4.11"
env_logger = "0.8.1"
clap-verbosity-flag = "0.3.1"
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"